added partials search, etc

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,1 +1,3 @@
-Home page.
+<p class="lead">
+    Web extract lets you customize internet search <span class="glyphicon glyphicon-link" ui-sref="search"></span>.
+</p>
