--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,1 +1,10 @@
-search ....
+<div ng-controller="DemoController" layout="column">
+    <md-content md-theme="docs-dark">
+        <form style="padding: 20px;" flex>
+            <div class="row">
+                <md-text-float label="URL" ng-model="data.url"></md-text-float>
+                <!--<md-text-float label="crawl date" ng-disabled="true" ng-model="data.crawldate"></md-text-float>-->
+            </div>
+        </form>
+    </md-content>
+</div>
