--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,3 +1,3 @@
-<p class="lead">
-    Web extract lets you customize internet search <span class="glyphicon glyphicon-link" ui-sref="search"></span>.
+<p class="lead" style="margin-top: 3rem;">
+    Web extract lets you customize internet search <span style="font-size: 70%; cursor: pointer;" class="glyphicon glyphicon-search" ui-sref="search"></span>
 </p>
