--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,3 +1,5 @@
-<p class="lead" style="margin-top: 3rem;">
-    Web extract lets you customize internet search <span style="font-size: 70%; cursor: pointer;" class="glyphicon glyphicon-search" ui-sref="search"></span>
+<h4>Introduction</h4>
+<p class="" style="margin-top: 2.7rem;">
+    Web extract lets you customize internet search.
 </p>
+
